# cmake_check_factorial

./: .gitlab-ci.yaml  .gitlabci.yaml  CMakeLists.txt  CTestConfig.cmake  factorial.cpp  factorial.h  test_factorial.cpp
.circleci/: config.yml
.docker/: Dockerfile
